--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,4 +1,4 @@
-<h2>Search Authors</h2>
+<h2 class="page-header">Search Authors</h2>
 
 <form action="/authors" method="GET">
     <label>Name</label>
@@ -10,7 +10,9 @@
 
 <% authors.forEach(author => { %>
     <div><%= author.name %></div>
-    <a href="/authors/<%= author.id %>">View</a>
-    <a href="/authors/<%= author.id %>/edit">Edit</a>
-    <%- include('../partials/deleteForm.ejs', { url: `/authors/${author.id}` }) %>
+    <div class="button-row">
+        <a class="btn-primary" href="/authors/<%= author.id %>">View</a>
+        <a class="btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
+        <%- include('../partials/deleteForm.ejs', { url: `/authors/${author.id}` }) %>
+    </div>
 <% }); %>
