--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -10,11 +10,18 @@
     <script defer src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
     <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
     <script defer src="/javascripts/fileUpload.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/stylesheets/shared/main.css">
     <title>How are you?</title>
 </head>
 <body>
-    <%- include('../partials/header.ejs') %>
-    <%- include('../partials/errorMessage.ejs') %>
-    <%- body %>
+    <div class="container">
+        <%- include('../partials/header.ejs') %>
+        <%- include('../partials/errorMessage.ejs') %>
+            <div class="inner-container">
+                <%- body %>
+            </div>
+    </div>
 </body>
 </html>
