--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -2,6 +2,8 @@
 
 <form action="/authors" method="POST">
     <%- include('_form_fields.ejs') %>
-    <a href="/authors">Cancel</a>
-    <button type="submit">Create</button>
+    <div class="form-row form-row-end button-row">
+        <a class="btn-danger" href="/authors">Cancel</a>
+        <button class="btn-primary" type="submit">Create</button>
+    </div>
 </form>
