--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -2,6 +2,8 @@
 
 <form action="/books/<%= book.id %>?_method=PUT" method="POST">
     <%- include('_form_fields') %>
-    <a href="/books">Cancel</a>
-    <button type="submit">Update</button>
+    <div class="form-row form-row-end button-row">
+        <a class="btn-danger" href="/books">Cancel</a>
+        <button class="btn-primary" type="submit">Update</button>
+    </div>
 </form>
