--- a/public/stylesheets/shared/author.css
+++ b/public/stylesheets/shared/author.css
@@ -1,6 +1,9 @@
-.search-result-row {
+.author-row {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     margin-bottom: 1rem;
+}
+
+.author-name {
+    font-size: 1.5rem;
 }
