--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -26,10 +26,4 @@
 
 <br>
 
-<div>
-    <% books.forEach(book => { %>
-        <a href="/books/<%= book.id %>">
-            <img height="150px" width="100px" src="<%= book.coverImagePath %>">
-        </a>
-    <% }); %>
-</div>
+<%- include('../partials/bookGrid.ejs', { books, large: true })%>
